codama-syn-helpers/tests-macros/tests/as_path/from_path_value.fail.stderr
error: unexpected tokens, expected a single path
 --> tests/as_path/from_path_value.fail.rs:3:15
  |
3 | #[as_path(foo = bar(1, 2, 3))]
  |               ^^^^^^^^^^^^^^
